--- a/frontend/civic_sentiment_app/pubspec.yaml
+++ b/frontend/civic_sentiment_app/pubspec.yaml
@@ -1,5 +1,5 @@
 name: civic_sentiment_app
-description: "A new Flutter project."
+description: "Civic Sentiment frontend"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^1.1.0
+  fl_chart: ^1.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
